--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app-layout">
+    <app-sidebar *ngIf="showSidebar"></app-sidebar>
+    <div class="main-content" [class.with-sidebar]="showSidebar">
+        <router-outlet></router-outlet>
+    </div>
+</div>
