style changes for the side bar

--- a/Angular/src/app/components/project-detail/project-detail.component.html
+++ b/Angular/src/app/components/project-detail/project-detail.component.html
@@ -180,7 +180,7 @@
         <div class="tab-content">
           <div class="tab-header">
             <h3>Team Members</h3>
-            <button mat-raised-button color="primary">
+            <button mat-raised-button color="primary" (click)="openTeamManagement()">
               <mat-icon>person_add</mat-icon> Add Member
             </button>
           </div>
