--- a/Angular/src/app/components/sidebar/sidebar.component.html
+++ b/Angular/src/app/components/sidebar/sidebar.component.html
@@ -7,11 +7,35 @@
     </div>
 
     <div class="menu-list">
-        <a *ngFor="let item of menuItems" [routerLink]="item.route" class="menu-item"
-            [class.active]="isActive(item.route)" routerLinkActive="active">
-            <mat-icon>{{ item.icon }}</mat-icon>
-            <span class="label" *ngIf="isExpanded">{{ item.label }}</span>
-        </a>
+        <ng-container *ngFor="let item of menuItems">
+            <!-- Menu item without children -->
+            <a *ngIf="!item.children" [routerLink]="item.route" class="menu-item" [class.active]="isActive(item.route)"
+                routerLinkActive="active">
+                <mat-icon>{{ item.icon }}</mat-icon>
+                <span class="label" *ngIf="isExpanded">{{ item.label }}</span>
+            </a>
+
+            <!-- Menu item with children (expandable) -->
+            <div *ngIf="item.children" class="menu-item-group">
+                <div class="menu-item" [class.active]="hasActiveChild(item)" [class.expanded]="item.expanded"
+                    (click)="toggleSubmenu(item)">
+                    <mat-icon>{{ item.icon }}</mat-icon>
+                    <span class="label" *ngIf="isExpanded">{{ item.label }}</span>
+                    <mat-icon class="expand-icon" *ngIf="isExpanded">
+                        {{ item.expanded ? 'expand_less' : 'expand_more' }}
+                    </mat-icon>
+                </div>
+
+                <!-- Submenu items -->
+                <div class="submenu" *ngIf="item.expanded && isExpanded">
+                    <a *ngFor="let child of item.children" [routerLink]="child.route" class="submenu-item"
+                        [class.active]="isActive(child.route)" routerLinkActive="active">
+                        <mat-icon>{{ child.icon }}</mat-icon>
+                        <span class="label">{{ child.label }}</span>
+                    </a>
+                </div>
+            </div>
+        </ng-container>
     </div>
 
     <div class="footer-section">
